--- a/package.json
+++ b/package.json
@@ -15,55 +15,55 @@
     "test:watch": "PORT=2998 NODE_ENV=test chokidar '**/*.js' --initial --ignore node_modules -c 'mocha --exit --recursive test/'"
   },
   "overrides": {
-    "canvas": "2.9.3"
+    "canvas": "3.1.0"
   },
   "resolutions": {
-    "canvas": "2.9.3"
+    "canvas": "3.1.0"
   },
   "dependencies": {
-    "bunyan": "^1.8.12",
-    "canvas": "2.9.3",
+    "bunyan": "^1.8.15",
+    "canvas": "^3.1.0",
     "canvas-5-polyfill": "^0.1.5",
     "chart.js": "^2.9.4",
     "chart.js-v3": "npm:chart.js@3.9.1",
-    "chart.js-v4": "npm:chart.js@4.0.1",
-    "chartjs-adapter-moment": "https://github.com/typpo/chartjs-adapter-moment.git#e9bc92ab6e0e500c91c4a9871db7b14d15b5c2e7",
+    "chart.js-v4": "npm:chart.js@4.4.8",
+    "chartjs-adapter-moment": "https://github.com/typpo/chartjs-adapter-moment.git",
     "chartjs-chart-box-and-violin-plot": "^2.4.0",
-    "chartjs-chart-radial-gauge": "^1.0.3",
-    "chartjs-node-canvas": "^3.0.6",
+    "chartjs-chart-radial-gauge": "^1.1.0",
+    "chartjs-node-canvas": "^3.2.0",
     "chartjs-plugin-annotation": "^0.5.7",
-    "chartjs-plugin-colorschemes": "https://github.com/typpo/chartjs-plugin-colorschemes.git#979ef8e599265f65c85d5dae90b543d5589c734a",
+    "chartjs-plugin-colorschemes": "https://github.com/typpo/chartjs-plugin-colorschemes.git",
     "chartjs-plugin-datalabels": "^0.5.0",
     "chartjs-plugin-doughnutlabel": "^2.0.3",
     "chartjs-plugin-piechart-outlabels": "^0.1.4",
-    "deepmerge": "^4.2.2",
-    "express": "^4.19.2",
-    "express-rate-limit": "^5.0.0",
+    "deepmerge": "^4.3.1",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "get-image-colors": "^4.0.1",
-    "javascript-stringify": "^2.0.0",
-    "node-fetch": "^2.6.7",
+    "javascript-stringify": "^2.1.0",
+    "node-fetch": "^3.3.2",
     "patternomaly": "^1.3.2",
-    "pdfkit": "^0.10.0",
-    "qrcode": "^1.3.3",
-    "qs": "^6.7.0",
-    "sharp": "^0.32.6",
-    "text2png": "^2.1.0",
+    "pdfkit": "^0.16.0",
+    "qrcode": "^1.5.4",
+    "qs": "^6.14.0",
+    "sharp": "^0.33.5",
+    "text2png": "^2.3.0",
     "viz.js": "^2.1.2"
   },
   "devDependencies": {
-    "@arkweid/lefthook": "^0.6.3",
-    "artillery": "^1.7.9",
-    "chokidar-cli": "^2.0.0",
-    "eslint": "^5.15.1",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.16.0",
-    "image-size": "^0.8.3",
-    "jimp": "^0.13.0",
-    "mocha": "^6.2.3",
-    "pixelmatch": "^5.1.0",
-    "prettier": "^1.18.2",
+    "@evilmartians/lefthook": "^1.11.2",
+    "artillery": "^2.0.22",
+    "chokidar-cli": "^3.0.0",
+    "eslint": "^9.21.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.31.0",
+    "image-size": "^2.0.0",
+    "jimp": "^1.6.0",
+    "mocha": "^11.1.0",
+    "pixelmatch": "^7.1.0",
+    "prettier": "^3.5.3",
     "qrcode-reader": "^1.0.4",
-    "supertest": "^4.0.2"
+    "supertest": "^7.0.0"
   },
   "peerDependencies": {
     "chart.js": ">= 2.0.0"
